# Console-Slot-Machine

./: LICENSE  README.md
08.SimpleSlot/: CMakeLists.txt  Configurations  Menu.cpp  Menu.h  PayoutTable.h  Player.cpp  Player.h  Slot.cpp  Slot.h  main.cpp
Console-Slot-Machine/: Configurations  Menu.h  Slot.cpp  main.cpp
